adding scroll for buttun list

--- a/canvas.html
+++ b/canvas.html
@@ -34,7 +34,7 @@
             <canvas class="myCanvas" id="myCanvas"></canvas>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" style="overflow-y: scroll; height:400px;">
             <ul class="list-unstyled" id="shapeList">
             </ul>
         </div>
