--- a/canvas.html
+++ b/canvas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="fr">
 <head>
-    <title>A simple canvas</title>
+    <title>Salut la compagnie</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="canvas.css" rel="stylesheet" type="text/css">
@@ -30,11 +30,10 @@
     <br/>
 
     <div class="row">
-        <div class="col-md-8" id="canvasDiv">
+        <div class="col-md-9" id="canvasDiv">
             <canvas class="myCanvas" id="myCanvas"></canvas>
         </div>
-
-        <div class="col-md-4" style="overflow-y: scroll; height:400px;">
+        <div class="col-md-1" style="overflow-y: scroll; height:600px;">
             <ul class="list-unstyled" id="shapeList">
             </ul>
         </div>
